<resources>
    <string name="app_name">Notate</string>
    <string name="font_size">Font Size</string>
    <string name="px_unit"> px</string>
    <string name="text_settings">Text Settings</string>
    <string name="type_here_hint">Type here...</string>
    <string name="edit_toolbar">Edit Toolbar</string>
    <string name="collapsible">Collapsible</string>
    <string name="tap_to_add">Tap to Add</string>
    <string name="nav_tool">Nav</string>
    <string name="done_action">Done</string>
    <string name="pen_tool">Pen</string>
    <string name="text_tool">Text</string>
    <string name="eraser_tool">Eraser</string>
    <string name="select_tool">Select</string>
    <string name="undo_action">Undo</string>
    <string name="redo_action">Redo</string>
    <string name="image_action">Image</string>
    <string name="select_tool_title">Select Tool</string>
    <string name="eraser_settings">Eraser Settings</string>
    <string name="pen_style">Pen Style</string>
    <string name="rectangle_selection">Rectangle</string>
    <string name="lasso_selection">Lasso</string>
</resources>
